Update CH01 notebook and VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
     "emmet.triggerExpansionOnTab": true,
     "files.autoSave": "onFocusChange",
     "terminal.integrated.fontSize": 16,
-    "workbench.colorTheme": "Dracula Pro (Van Helsing)",
+    "workbench.colorTheme": "Quiet Light",
     "workbench.fontAliasing": "antialiased",
     "workbench.statusBar.visible": true,
     // "window.zoomLevel": 1
